src/parse/parsetiger.output
State 2 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: exp
    2        | chunks

    3 exps: ε
    4     | exps.1

    5 exps.1: exps.1 ";" exps.2
    6       | exps.2

    7 exps.2: exp

    8 rec: ε
    9    | rec.1

   10 rec.1: rec.1 "," rec.2
   11      | rec.2

   12 rec.2: "identifier" "=" exp

   13 exp: "integer"
   14    | "nil"
   15    | "string"
   16    | "identifier" "[" exp "]" "of" exp
   17    | "identifier" "{" rec "}"
   18    | lvalue
   19    | "identifier" "(" funcall ")"
   20    | "-" exp
   21    | exp "=" exp
   22    | exp "+" exp
   23    | exp "-" exp
   24    | exp "*" exp
   25    | exp "/" exp
   26    | exp ">=" exp
   27    | exp "<=" exp
   28    | exp "<>" exp
   29    | exp ">" exp
   30    | exp "<" exp
   31    | exp "&" exp
   32    | exp "|" exp
   33    | "(" exps ")"
   34    | lvalue ":=" exp
   35    | "if" exp "then" exp "else" exp
   36    | "if" exp "then" exp
   37    | "while" exp "do" exp
   38    | "for" "identifier" ":=" exp "to" exp "do" exp
   39    | "break"
   40    | "let" chunks "in" exps "end"
   41    | "new" typeid
   42    | lvalue "." "identifier" "(" funcall ")"
   43    | "_cast" "(" exp "," ty ")"
   44    | "_exp" "(" "integer" ")"

   45 lvalue: "identifier"
   46       | lvalue "." "identifier"
   47       | lvalue "[" exp "]"
   48       | "_lvalue" "(" "integer" ")"

   49 funcall: ε
   50        | funcall.1

   51 funcall.1: funcall.1 "," funcall.2
   52          | funcall.2

   53 funcall.2: exp

   54 chunks: ε
   55       | tychunk chunks
   56       | funchunk chunks
   57       | varchunk chunks
   58       | "import" "string"
   59       | "_chunks" "(" "integer" ")" chunks

   60 funchunk: fundec
   61         | fundec funchunk

   62 fundec: "function" "identifier" "(" tyvarchunks ")" "=" exp
   63       | "function" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp
   64       | "primitive" "identifier" "(" tyvarchunks ")"
   65       | "primitive" "identifier" "(" tyvarchunks ")" ":" typeid

   66 varchunk: vardec

   67 vardec: "var" "identifier" ":=" exp
   68       | "var" "identifier" ":" typeid ":=" exp

   69 tychunk: tydec
   70        | tydec tychunk

   71 tydec: "type" "identifier" "=" ty
   72      | "class" "identifier" "extends" typeid "{" classfields "}"
   73      | "class" "identifier" "{" classfields "}"

   74 ty: typeid
   75   | "{" tyfields "}"
   76   | "array" "of" typeid
   77   | "class" "extends" typeid "{" classfields "}"
   78   | "class" "{" classfields "}"

   79 tyfields: ε
   80         | tyfields.1

   81 tyfields.1: tyfields.1 "," tyfield
   82           | tyfield

   83 tyfield: "identifier" ":" typeid

   84 tyvarchunks: ε
   85            | tyvarchunks.1

   86 tyvarchunks.1: tyvarchunks.1 "," tyvardec
   87              | tyvardec

   88 tyvardec: "identifier" ":" typeid

   89 classfields: ε
   90            | varchunk classfields
   91            | methchunk classfields

   92 methchunk: methdec
   93          | methdec methchunk

   94 methdec: "method" "identifier" "(" tyvarchunks ")" "=" exp
   95        | "method" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp

   96 typeid: "identifier"
   97       | "_namety" "(" "integer" ")"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "string" <std::string> (258) 15 58
    "identifier" <misc::symbol> (259) 12 16 17 19 38 42 45 46 62 63 64 65 67 68 71 72 73 83 88 94 95 96
    "integer" <int> (260) 13 44 48 59 97
    "&" (261) 31
    "array" (262) 76
    ":=" (263) 34 38 67 68
    "break" (264) 39
    "_cast" (265) 43
    "class" (266) 72 73 77 78
    ":" (267) 63 65 68 83 88 95
    "," (268) 10 43 51 81 86
    "/" (269) 25
    "do" (270) 37 38
    "." (271) 42 46
    "else" (272) 35
    "end" (273) 40
    "=" (274) 12 21 62 63 71 94 95
    "extends" (275) 72 77
    "for" (276) 38
    "function" (277) 62 63
    ">=" (278) 26
    ">" (279) 29
    "if" (280) 35 36
    "import" (281) 58
    "in" (282) 40
    "{" (283) 17 72 73 75 77 78
    "[" (284) 16 47
    "<=" (285) 27
    "let" (286) 40
    "(" (287) 19 33 42 43 44 48 59 62 63 64 65 94 95 97
    "<" (288) 30
    "-" (289) 20 23
    "method" (290) 94 95
    "<>" (291) 28
    "new" (292) 41
    "nil" (293) 14
    "of" (294) 16 76
    "|" (295) 32
    "+" (296) 22
    "primitive" (297) 64 65
    "}" (298) 17 72 73 75 77 78
    "]" (299) 16 47
    ")" (300) 19 33 42 43 44 48 59 62 63 64 65 94 95 97
    ";" (301) 5
    "then" (302) 35 36
    "*" (303) 24
    "to" (304) 38
    "type" (305) 71
    "var" (306) 67 68
    "while" (307) 37
    "_exp" (308) 44
    "_lvalue" (309) 48
    "_chunks" (310) 59
    "_namety" (311) 97


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1 2
        on right: 0
    exps <ast::exps_type*> (59)
        on left: 3 4
        on right: 33 40
    exps.1 <ast::exps_type*> (60)
        on left: 5 6
        on right: 4 5
    exps.2 <ast::Exp*> (61)
        on left: 7
        on right: 5 6
    rec <ast::fieldinits_type*> (62)
        on left: 8 9
        on right: 17
    rec.1 <ast::fieldinits_type*> (63)
        on left: 10 11
        on right: 9 10
    rec.2 <ast::FieldInit*> (64)
        on left: 12
        on right: 10 11
    exp <ast::Exp*> (65)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
        on right: 1 7 12 16 20 21 22 23 24 25 26 27 28 29 30 31 32 34 35 36 37 38 43 47 53 62 63 67 68 94 95
    lvalue <ast::Var*> (66)
        on left: 45 46 47 48
        on right: 18 34 42 46 47
    funcall <ast::exps_type*> (67)
        on left: 49 50
        on right: 19 42
    funcall.1 <ast::exps_type*> (68)
        on left: 51 52
        on right: 50 51
    funcall.2 <ast::Exp*> (69)
        on left: 53
        on right: 51 52
    chunks <ast::ChunkList*> (70)
        on left: 54 55 56 57 58 59
        on right: 2 40 55 56 57 59
    funchunk <ast::FunctionChunk*> (71)
        on left: 60 61
        on right: 56 61
    fundec <ast::FunctionDec*> (72)
        on left: 62 63 64 65
        on right: 60 61
    varchunk <ast::VarChunk*> (73)
        on left: 66
        on right: 57 90
    vardec <ast::VarDec*> (74)
        on left: 67 68
        on right: 66
    tychunk <ast::TypeChunk*> (75)
        on left: 69 70
        on right: 55 70
    tydec <ast::TypeDec*> (76)
        on left: 71 72 73
        on right: 69 70
    ty <ast::Ty*> (77)
        on left: 74 75 76 77 78
        on right: 43 71
    tyfields <ast::fields_type*> (78)
        on left: 79 80
        on right: 75
    tyfields.1 <ast::fields_type*> (79)
        on left: 81 82
        on right: 80 81
    tyfield <ast::Field*> (80)
        on left: 83
        on right: 81 82
    tyvarchunks <ast::VarChunk*> (81)
        on left: 84 85
        on right: 62 63 64 65 94 95
    tyvarchunks.1 <ast::VarChunk*> (82)
        on left: 86 87
        on right: 85 86
    tyvardec <ast::VarDec*> (83)
        on left: 88
        on right: 86 87
    classfields <ast::ChunkList*> (84)
        on left: 89 90 91
        on right: 72 73 77 78 90 91
    methchunk <ast::MethodChunk*> (85)
        on left: 92 93
        on right: 91 93
    methdec <ast::MethodDec*> (86)
        on left: 94 95
        on right: 92 93
    typeid <ast::NameTy*> (87)
        on left: 96 97
        on right: 41 63 65 68 72 74 76 77 83 88 95


State 0

    0 $accept: • program "end of file"
    1 program: • exp
    2        | • chunks
   13 exp: • "integer"
   14    | • "nil"
   15    | • "string"
   16    | • "identifier" "[" exp "]" "of" exp
   17    | • "identifier" "{" rec "}"
   18    | • lvalue
   19    | • "identifier" "(" funcall ")"
   20    | • "-" exp
   21    | • exp "=" exp
   22    | • exp "+" exp
   23    | • exp "-" exp
   24    | • exp "*" exp
   25    | • exp "/" exp
   26    | • exp ">=" exp
   27    | • exp "<=" exp
   28    | • exp "<>" exp
   29    | • exp ">" exp
   30    | • exp "<" exp
   31    | • exp "&" exp
   32    | • exp "|" exp
   33    | • "(" exps ")"
   34    | • lvalue ":=" exp
   35    | • "if" exp "then" exp "else" exp
   36    | • "if" exp "then" exp
   37    | • "while" exp "do" exp
   38    | • "for" "identifier" ":=" exp "to" exp "do" exp
   39    | • "break"
   40    | • "let" chunks "in" exps "end"
   41    | • "new" typeid
   42    | • lvalue "." "identifier" "(" funcall ")"
   43    | • "_cast" "(" exp "," ty ")"
   44    | • "_exp" "(" "integer" ")"
   45 lvalue: • "identifier"
   46       | • lvalue "." "identifier"
   47       | • lvalue "[" exp "]"
   48       | • "_lvalue" "(" "integer" ")"
   54 chunks: ε •  ["end of file"]
   55       | • tychunk chunks
   56       | • funchunk chunks
   57       | • varchunk chunks
   58       | • "import" "string"
   59       | • "_chunks" "(" "integer" ")" chunks
   60 funchunk: • fundec
   61         | • fundec funchunk
   62 fundec: • "function" "identifier" "(" tyvarchunks ")" "=" exp
   63       | • "function" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp
   64       | • "primitive" "identifier" "(" tyvarchunks ")"
   65       | • "primitive" "identifier" "(" tyvarchunks ")" ":" typeid
   66 varchunk: • vardec
   67 vardec: • "var" "identifier" ":=" exp
   68       | • "var" "identifier" ":" typeid ":=" exp
   69 tychunk: • tydec
   70        | • tydec tychunk
   71 tydec: • "type" "identifier" "=" ty
   72      | • "class" "identifier" "extends" typeid "{" classfields "}"
   73      | • "class" "identifier" "{" classfields "}"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "class"       shift, and go to state 6
    "for"         shift, and go to state 7
    "function"    shift, and go to state 8
    "if"          shift, and go to state 9
    "import"      shift, and go to state 10
    "let"         shift, and go to state 11
    "("           shift, and go to state 12
    "-"           shift, and go to state 13
    "new"         shift, and go to state 14
    "nil"         shift, and go to state 15
    "primitive"   shift, and go to state 16
    "type"        shift, and go to state 17
    "var"         shift, and go to state 18
    "while"       shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21
    "_chunks"     shift, and go to state 22

    $default  reduce using rule 54 (chunks)

    program   go to state 23
    exp       go to state 24
    lvalue    go to state 25
    chunks    go to state 26
    funchunk  go to state 27
    fundec    go to state 28
    varchunk  go to state 29
    vardec    go to state 30
    tychunk   go to state 31
    tydec     go to state 32


State 1

   15 exp: "string" •

    $default  reduce using rule 15 (exp)


State 2

   16 exp: "identifier" • "[" exp "]" "of" exp
   17    | "identifier" • "{" rec "}"
   19    | "identifier" • "(" funcall ")"
   45 lvalue: "identifier" •  ["end of file", "&", ":=", "class", ",", "/", "do", ".", "else", "end", "=", "function", ">=", ">", "import", "in", "[", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var", "_chunks"]

    "{"  shift, and go to state 33
    "["  shift, and go to state 34
    "("  shift, and go to state 35

    "["       [reduce using rule 45 (lvalue)]
    $default  reduce using rule 45 (lvalue)

    shift/reduce conflict on token "[":
       45 lvalue: "identifier" •
       16 exp: "identifier" • "[" exp "]" "of" exp
      First example: "identifier" • "[" exp "]" "of" exp "end of file"
      Shift derivation
        $accept
        ↳ 0: program                                        "end of file"
             ↳ 1: exp
                  ↳ 16: "identifier" • "[" exp "]" "of" exp
      Second example: "identifier" • "[" exp "]" "end of file"
      Reduce derivation
        $accept
        ↳ 0: program                                           "end of file"
             ↳ 1: exp
                  ↳ 18: lvalue
                        ↳ 47: lvalue               "[" exp "]"
                              ↳ 45: "identifier" •



State 3

   13 exp: "integer" •

    $default  reduce using rule 13 (exp)


State 4

   39 exp: "break" •

    $default  reduce using rule 39 (exp)


State 5

   43 exp: "_cast" • "(" exp "," ty ")"

    "("  shift, and go to state 36


State 6

   72 tydec: "class" • "identifier" "extends" typeid "{" classfields "}"
   73      | "class" • "identifier" "{" classfields "}"

    "identifier"  shift, and go to state 37


State 7

   38 exp: "for" • "identifier" ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 38


State 8

   62 fundec: "function" • "identifier" "(" tyvarchunks ")" "=" exp
   63       | "function" • "identifier" "(" tyvarchunks ")" ":" typeid "=" exp

    "identifier"  shift, and go to state 39


State 9

   13 exp: • "integer"
   14    | • "nil"
   15    | • "string"
   16    | • "identifier" "[" exp "]" "of" exp
   17    | • "identifier" "{" rec "}"
   18    | • lvalue
   19    | • "identifier" "(" funcall ")"
   20    | • "-" exp
   21    | • exp "=" exp
   22    | • exp "+" exp
   23    | • exp "-" exp
   24    | • exp "*" exp
   25    | • exp "/" exp
   26    | • exp ">=" exp
   27    | • exp "<=" exp
   28    | • exp "<>" exp
   29    | • exp ">" exp
   30    | • exp "<" exp
   31    | • exp "&" exp
   32    | • exp "|" exp
   33    | • "(" exps ")"
   34    | • lvalue ":=" exp
   35    | • "if" exp "then" exp "else" exp
   35    | "if" • exp "then" exp "else" exp
   36    | • "if" exp "then" exp
   36    | "if" • exp "then" exp
   37    | • "while" exp "do" exp
   38    | • "for" "identifier" ":=" exp "to" exp "do" exp
   39    | • "break"
   40    | • "let" chunks "in" exps "end"
   41    | • "new" typeid
   42    | • lvalue "." "identifier" "(" funcall ")"
   43    | • "_cast" "(" exp "," ty ")"
   44    | • "_exp" "(" "integer" ")"
   45 lvalue: • "identifier"
   46       | • lvalue "." "identifier"
   47       | • lvalue "[" exp "]"
   48       | • "_lvalue" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 7
    "if"          shift, and go to state 9
    "let"         shift, and go to state 11
    "("           shift, and go to state 12
    "-"           shift, and go to state 13
    "new"         shift, and go to state 14
    "nil"         shift, and go to state 15
    "while"       shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21

    exp     go to state 40
    lvalue  go to state 25


State 10

   58 chunks: "import" • "string"

    "string"  shift, and go to state 41


State 11

   40 exp: "let" • chunks "in" exps "end"
   54 chunks: ε •  ["in"]
   55       | • tychunk chunks
   56       | • funchunk chunks
   57       | • varchunk chunks
   58       | • "import" "string"
   59       | • "_chunks" "(" "integer" ")" chunks
   60 funchunk: • fundec
   61         | • fundec funchunk
   62 fundec: • "function" "identifier" "(" tyvarchunks ")" "=" exp
   63       | • "function" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp
   64       | • "primitive" "identifier" "(" tyvarchunks ")"
   65       | • "primitive" "identifier" "(" tyvarchunks ")" ":" typeid
   66 varchunk: • vardec
   67 vardec: • "var" "identifier" ":=" exp
   68       | • "var" "identifier" ":" typeid ":=" exp
   69 tychunk: • tydec
   70        | • tydec tychunk
   71 tydec: • "type" "identifier" "=" ty
   72      | • "class" "identifier" "extends" typeid "{" classfields "}"
   73      | • "class" "identifier" "{" classfields "}"

    "class"      shift, and go to state 6
    "function"   shift, and go to state 8
    "import"     shift, and go to state 10
    "primitive"  shift, and go to state 16
    "type"       shift, and go to state 17
    "var"        shift, and go to state 18
    "_chunks"    shift, and go to state 22

    $default  reduce using rule 54 (chunks)

    chunks    go to state 42
    funchunk  go to state 27
    fundec    go to state 28
    varchunk  go to state 29
    vardec    go to state 30
    tychunk   go to state 31
    tydec     go to state 32


State 12

    3 exps: ε •  [")"]
    4     | • exps.1
    5 exps.1: • exps.1 ";" exps.2
    6       | • exps.2
    7 exps.2: • exp
   13 exp: • "integer"
   14    | • "nil"
   15    | • "string"
   16    | • "identifier" "[" exp "]" "of" exp
   17    | • "identifier" "{" rec "}"
   18    | • lvalue
   19    | • "identifier" "(" funcall ")"
   20    | • "-" exp
   21    | • exp "=" exp
   22    | • exp "+" exp
   23    | • exp "-" exp
   24    | • exp "*" exp
   25    | • exp "/" exp
   26    | • exp ">=" exp
   27    | • exp "<=" exp
   28    | • exp "<>" exp
   29    | • exp ">" exp
   30    | • exp "<" exp
   31    | • exp "&" exp
   32    | • exp "|" exp
   33    | • "(" exps ")"
   33    | "(" • exps ")"
   34    | • lvalue ":=" exp
   35    | • "if" exp "then" exp "else" exp
   36    | • "if" exp "then" exp
   37    | • "while" exp "do" exp
   38    | • "for" "identifier" ":=" exp "to" exp "do" exp
   39    | • "break"
   40    | • "let" chunks "in" exps "end"
   41    | • "new" typeid
   42    | • lvalue "." "identifier" "(" funcall ")"
   43    | • "_cast" "(" exp "," ty ")"
   44    | • "_exp" "(" "integer" ")"
   45 lvalue: • "identifier"
   46       | • lvalue "." "identifier"
   47       | • lvalue "[" exp "]"
   48       | • "_lvalue" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 7
    "if"          shift, and go to state 9
    "let"         shift, and go to state 11
    "("           shift, and go to state 12
    "-"           shift, and go to state 13
    "new"         shift, and go to state 14
    "nil"         shift, and go to state 15
    "while"       shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21

    $default  reduce using rule 3 (exps)

    exps    go to state 43
    exps.1  go to state 44
    exps.2  go to state 45
    exp     go to state 46
    lvalue  go to state 25


State 13

   13 exp: • "integer"
   14    | • "nil"
   15    | • "string"
   16    | • "identifier" "[" exp "]" "of" exp
   17    | • "identifier" "{" rec "}"
   18    | • lvalue
   19    | • "identifier" "(" funcall ")"
   20    | • "-" exp
   20    | "-" • exp
   21    | • exp "=" exp
   22    | • exp "+" exp
   23    | • exp "-" exp
   24    | • exp "*" exp
   25    | • exp "/" exp
   26    | • exp ">=" exp
   27    | • exp "<=" exp
   28    | • exp "<>" exp
   29    | • exp ">" exp
   30    | • exp "<" exp
   31    | • exp "&" exp
   32    | • exp "|" exp
   33    | • "(" exps ")"
   34    | • lvalue ":=" exp
   35    | • "if" exp "then" exp "else" exp
   36    | • "if" exp "then" exp
   37    | • "while" exp "do" exp
   38    | • "for" "identifier" ":=" exp "to" exp "do" exp
   39    | • "break"
   40    | • "let" chunks "in" exps "end"
   41    | • "new" typeid
   42    | • lvalue "." "identifier" "(" funcall ")"
   43    | • "_cast" "(" exp "," ty ")"
   44    | • "_exp" "(" "integer" ")"
   45 lvalue: • "identifier"
   46       | • lvalue "." "identifier"
   47       | • lvalue "[" exp "]"
   48       | • "_lvalue" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 7
    "if"          shift, and go to state 9
    "let"         shift, and go to state 11
    "("           shift, and go to state 12
    "-"           shift, and go to state 13
    "new"         shift, and go to state 14
    "nil"         shift, and go to state 15
    "while"       shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21

    exp     go to state 47
    lvalue  go to state 25


State 14

   41 exp: "new" • typeid
   96 typeid: • "identifier"
   97       | • "_namety" "(" "integer" ")"

    "identifier"  shift, and go to state 48
    "_namety"     shift, and go to state 49

    typeid  go to state 50


State 15

   14 exp: "nil" •

    $default  reduce using rule 14 (exp)


State 16

   64 fundec: "primitive" • "identifier" "(" tyvarchunks ")"
   65       | "primitive" • "identifier" "(" tyvarchunks ")" ":" typeid

    "identifier"  shift, and go to state 51


State 17

   71 tydec: "type" • "identifier" "=" ty

    "identifier"  shift, and go to state 52


State 18

   67 vardec: "var" • "identifier" ":=" exp
   68       | "var" • "identifier" ":" typeid ":=" exp

    "identifier"  shift, and go to state 53


State 19

   13 exp: • "integer"
   14    | • "nil"
   15    | • "string"
   16    | • "identifier" "[" exp "]" "of" exp
   17    | • "identifier" "{" rec "}"
   18    | • lvalue
   19    | • "identifier" "(" funcall ")"
   20    | • "-" exp
   21    | • exp "=" exp
   22    | • exp "+" exp
   23    | • exp "-" exp
   24    | • exp "*" exp
   25    | • exp "/" exp
   26    | • exp ">=" exp
   27    | • exp "<=" exp
   28    | • exp "<>" exp
   29    | • exp ">" exp
   30    | • exp "<" exp
   31    | • exp "&" exp
   32    | • exp "|" exp
   33    | • "(" exps ")"
   34    | • lvalue ":=" exp
   35    | • "if" exp "then" exp "else" exp
   36    | • "if" exp "then" exp
   37    | • "while" exp "do" exp
   37    | "while" • exp "do" exp
   38    | • "for" "identifier" ":=" exp "to" exp "do" exp
   39    | • "break"
   40    | • "let" chunks "in" exps "end"
   41    | • "new" typeid
   42    | • lvalue "." "identifier" "(" funcall ")"
   43    | • "_cast" "(" exp "," ty ")"
   44    | • "_exp" "(" "integer" ")"
   45 lvalue: • "identifier"
   46       | • lvalue "." "identifier"
   47       | • lvalue "[" exp "]"
   48       | • "_lvalue" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 7
    "if"          shift, and go to state 9
    "let"         shift, and go to state 11
    "("           shift, and go to state 12
    "-"           shift, and go to state 13
    "new"         shift, and go to state 14
    "nil"         shift, and go to state 15
    "while"       shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21

    exp     go to state 54
    lvalue  go to state 25


State 20

   44 exp: "_exp" • "(" "integer" ")"

    "("  shift, and go to state 55


State 21

   48 lvalue: "_lvalue" • "(" "integer" ")"

    "("  shift, and go to state 56


State 22

   59 chunks: "_chunks" • "(" "integer" ")" chunks

    "("  shift, and go to state 57


State 23

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 58


State 24

    1 program: exp •  ["end of file"]
   21 exp: exp • "=" exp
   22    | exp • "+" exp
   23    | exp • "-" exp
   24    | exp • "*" exp
   25    | exp • "/" exp
   26    | exp • ">=" exp
   27    | exp • "<=" exp
   28    | exp • "<>" exp
   29    | exp • ">" exp
   30    | exp • "<" exp
   31    | exp • "&" exp
   32    | exp • "|" exp

    "&"   shift, and go to state 59
    "/"   shift, and go to state 60
    "="   shift, and go to state 61
    ">="  shift, and go to state 62
    ">"   shift, and go to state 63
    "<="  shift, and go to state 64
    "<"   shift, and go to state 65
    "-"   shift, and go to state 66
    "<>"  shift, and go to state 67
    "|"   shift, and go to state 68
    "+"   shift, and go to state 69
    "*"   shift, and go to state 70

    $default  reduce using rule 1 (program)


State 25

   18 exp: lvalue •  ["end of file", "&", "class", ",", "/", "do", "else", "end", "=", "function", ">=", ">", "import", "in", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var", "_chunks"]
   34    | lvalue • ":=" exp
   42    | lvalue • "." "identifier" "(" funcall ")"
   46 lvalue: lvalue • "." "identifier"
   47       | lvalue • "[" exp "]"

    ":="  shift, and go to state 71
    "."   shift, and go to state 72
    "["   shift, and go to state 73

    $default  reduce using rule 18 (exp)


State 26

    2 program: chunks •

    $default  reduce using rule 2 (program)


State 27

   54 chunks: ε •  ["end of file", "in"]
   55       | • tychunk chunks
   56       | • funchunk chunks
   56       | funchunk • chunks
   57       | • varchunk chunks
   58       | • "import" "string"
   59       | • "_chunks" "(" "integer" ")" chunks
   60 funchunk: • fundec
   61         | • fundec funchunk
   62 fundec: • "function" "identifier" "(" tyvarchunks ")" "=" exp
   63       | • "function" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp
   64       | • "primitive" "identifier" "(" tyvarchunks ")"
   65       | • "primitive" "identifier" "(" tyvarchunks ")" ":" typeid
   66 varchunk: • vardec
   67 vardec: • "var" "identifier" ":=" exp
   68       | • "var" "identifier" ":" typeid ":=" exp
   69 tychunk: • tydec
   70        | • tydec tychunk
   71 tydec: • "type" "identifier" "=" ty
   72      | • "class" "identifier" "extends" typeid "{" classfields "}"
   73      | • "class" "identifier" "{" classfields "}"

    "class"      shift, and go to state 6
    "function"   shift, and go to state 8
    "import"     shift, and go to state 10
    "primitive"  shift, and go to state 16
    "type"       shift, and go to state 17
    "var"        shift, and go to state 18
    "_chunks"    shift, and go to state 22

    $default  reduce using rule 54 (chunks)

    chunks    go to state 74
    funchunk  go to state 27
    fundec    go to state 28
    varchunk  go to state 29
    vardec    go to state 30
    tychunk   go to state 31
    tydec     go to state 32


State 28

   60 funchunk: • fundec
   60         | fundec •  ["end of file", "class", "import", "in", "type", "var", "_chunks"]
   61         | • fundec funchunk
   61         | fundec • funchunk
   62 fundec: • "function" "identifier" "(" tyvarchunks ")" "=" exp
   63       | • "function" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp
   64       | • "primitive" "identifier" "(" tyvarchunks ")"
   65       | • "primitive" "identifier" "(" tyvarchunks ")" ":" typeid

    "function"   shift, and go to state 8
    "primitive"  shift, and go to state 16

    $default  reduce using rule 60 (funchunk)

    funchunk  go to state 75
    fundec    go to state 28

    Conflict between rule 60 and token "function" resolved as shift ("_chunks" < "function").
    Conflict between rule 60 and token "primitive" resolved as shift ("_chunks" < "primitive").


State 29

   54 chunks: ε •  ["end of file", "in"]
   55       | • tychunk chunks
   56       | • funchunk chunks
   57       | • varchunk chunks
   57       | varchunk • chunks
   58       | • "import" "string"
   59       | • "_chunks" "(" "integer" ")" chunks
   60 funchunk: • fundec
   61         | • fundec funchunk
   62 fundec: • "function" "identifier" "(" tyvarchunks ")" "=" exp
   63       | • "function" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp
   64       | • "primitive" "identifier" "(" tyvarchunks ")"
   65       | • "primitive" "identifier" "(" tyvarchunks ")" ":" typeid
   66 varchunk: • vardec
   67 vardec: • "var" "identifier" ":=" exp
   68       | • "var" "identifier" ":" typeid ":=" exp
   69 tychunk: • tydec
   70        | • tydec tychunk
   71 tydec: • "type" "identifier" "=" ty
   72      | • "class" "identifier" "extends" typeid "{" classfields "}"
   73      | • "class" "identifier" "{" classfields "}"

    "class"      shift, and go to state 6
    "function"   shift, and go to state 8
    "import"     shift, and go to state 10
    "primitive"  shift, and go to state 16
    "type"       shift, and go to state 17
    "var"        shift, and go to state 18
    "_chunks"    shift, and go to state 22

    $default  reduce using rule 54 (chunks)

    chunks    go to state 76
    funchunk  go to state 27
    fundec    go to state 28
    varchunk  go to state 29
    vardec    go to state 30
    tychunk   go to state 31
    tydec     go to state 32


State 30

   66 varchunk: vardec •

    $default  reduce using rule 66 (varchunk)


State 31

   54 chunks: ε •  ["end of file", "in"]
   55       | • tychunk chunks
   55       | tychunk • chunks
   56       | • funchunk chunks
   57       | • varchunk chunks
   58       | • "import" "string"
   59       | • "_chunks" "(" "integer" ")" chunks
   60 funchunk: • fundec
   61         | • fundec funchunk
   62 fundec: • "function" "identifier" "(" tyvarchunks ")" "=" exp
   63       | • "function" "identifier" "(" tyvarchunks ")" ":" typeid "=" exp
   64       | • "primitive" "identifier" "(" tyvarchunks ")"
   65       | • "primitive" "identifier" "(" tyvarchunks ")" ":" typeid
   66 varchunk: • vardec
   67 vardec: • "var" "identifier" ":=" exp
   68       | • "var" "identifier" ":" typeid ":=" exp
   69 tychunk: • tydec
   70        | • tydec tychunk
   71 tydec: • "type" "identifier" "=" ty
   72      | • "class" "identifier" "extends" typeid "{" classfields "}"
   73      | • "class" "identifier" "{" classfields "}"

    "class"      shift, and go to state 6
    "function"   shift, and go to state 8
    "import"     shift, and go to state 10
    "primitive"  shift, and go to state 16
    "type"       shift, and go to state 17
    "var"        shift, and go to state 18
    "_chunks"    shift, and go to state 22

    $default  reduce using rule 54 (chunks)

    chunks    go to state 77
    funchunk  go to state 27
    fundec    go to state 28
    varchunk  go to state 29
    vardec    go to state 30
    tychunk   go to state 31
    tydec     go to state 32


State 32

   69 tychunk: • tydec
   69        | tydec •  ["end of file", "function", "import", "in", "primitive", "var", "_chunks"]
   70        | • tydec tychunk
   70        | tydec • tychunk
   71 tydec: • "type" "identifier" "=" ty
   72      | • "class" "identifier" "extends" typeid "{" classfields "}"
   73      | • "class" "identifier" "{" classfields "}"

    "class"  shift, and go to state 6
    "type"   shift, and go to state 17

    $default  reduce using rule 69 (tychunk)

    tychunk  go to state 78
    tydec    go to state 32

    Conflict between rule 69 and token "class" resolved as shift ("_chunks" < "class").
    Conflict between rule 69 and token "type" resolved as shift ("_chunks" < "type").


State 33

    8 rec: ε •  ["}"]
    9    | • rec.1
   10 rec.1: • rec.1 "," rec.2
   11      | • rec.2
   12 rec.2: • "identifier" "=" exp
   17 exp: "identifier" "{" • rec "}"

    "identifier"  shift, and go to state 79

    $default  reduce using rule 8 (rec)

    rec    go to state 80
    rec.1  go to state 81
    rec.2  go to state 82


State 34
